--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,9 @@
-
+#Etape 4 de notre fichier contenant le guide des étapes à suivre pour la mise en place de notre microservice
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultzone: http://localhost:8761/eureka
