--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,7 @@
 #Etape 4 de notre fichier contenant le guide des étapes à suivre pour la mise en place de notre microservice
-spring:
-  application:
-    name: Config-Default
+#spring:
+  #application:
+    #name: Config-Default
 
 eureka:
   instance:
